--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@ img,video{
 <div class="gift-box" onclick="openGift(1)">🎁 Gift 1</div>
 <div class="gift-box" onclick="openGift(2)">🎁 Gift 2</div>
 <div class="gift-box" onclick="openGift(3)">🎁 Gift 3</div>
-<div class="gift-box" onclick="openGift(4)">🎁 Gift 4</div>
-<div class="gift-box" onclick="openGift(5)">🎁 Gift 5</div>
+<div class="gift-box" onclick="openGift(4)">🎁 Gift 5</div>
 </div>
 </div>
 
@@ -167,7 +166,7 @@ function openGift(num){
  // GIFT 2 NOTE
  if(num===2){
  giftContent.innerHTML=`
- <h2>🌙 One Last Thing</h2>
+ <h2>🌙 Yaad rakhna🥰</h2>
  <p>
  No matter where life takes us,<br>
  I’ll always wish for your happiness.<br><br>
@@ -179,28 +178,20 @@ function openGift(num){
  // GIFT 3 PHOTO
  if(num===3){
  giftContent.innerHTML=`
- <h2>📸 Memory</h2>
- <img src="photo.jpg">
+ <h2>📸 Birthday gurlie😇</h2>
+ <img src="https://github.com/Maddoxrollins/birthday-gift/blob/main/Screenshot_20260207-232846_Gallery.jpg">
+ <img src="https://github.com/Maddoxrollins/birthday-gift/blob/main/Screenshot_20260207-232852_Gallery.jpg">
+ <img src="https://github.com/Maddoxrollins/birthday-gift/blob/main/Screenshot_20260207-232846_Gallery.jpg">
+ <img src="https://github.com/Maddoxrollins/birthday-gift/blob/main/Screenshot_20260207-232905_Gallery.jpg">
  <p>A special memory 💕</p>`;
  }
 
- // GIFT 4 VIDEO
- if(num===4){
- giftContent.innerHTML=`
- <h2>🎥 Video Surprise</h2>
- <video controls>
- <source src="video.mp4" type="video/mp4">
- </video>`;
- }
-
- // GIFT 5 CAKE
- if(num===5){
+ // GIFT 4 Cakeyy
+  if(num===5){
  giftContent.innerHTML=`
  <h2>🎂 Cake Time</h2>
- <img src="cake.jpg">
- <p>Make a wish 🌟</p>`;
- }
-
+ <img src="https://github.com/Maddoxrollins/birthday-gift/blob/main/images%20(12).jpeg">
+<p> Enjoyy Kriyooo🌷</p>`;
 }
 
 // TYPEWRITER TEXT
