--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ function openGift(num){
 <p> Enjoyy Kriyooo🌷</p>`;
 }
 
-// TYPEWRITER TEXT
+  }// TYPEWRITER TEXT
 const letterText=`HAPPIEST BIRTHDAYYY!!!! 💌
 
 dear SARVEXX 💝,
