--- a/index.html
+++ b/index.html
@@ -187,14 +187,16 @@ function openGift(num){
  }
 
  // GIFT 4 Cakeyy
-  if(num===5){
+ if(num===4){
  giftContent.innerHTML=`
  <h2>🎂 Cake Time</h2>
  <img src="https://github.com/Maddoxrollins/birthday-gift/blob/main/images%20(12).jpeg">
 <p> Enjoyy Kriyooo🌷</p>`;
 }
 
-  }// TYPEWRITER TEXT
+} // ✅ FUNCTION CLOSED HERE
+
+// TYPEWRITER TEXT
 const letterText=`HAPPIEST BIRTHDAYYY!!!! 💌
 
 dear SARVEXX 💝,
@@ -248,4 +250,4 @@ function startTypewriter(){
 </script>
 
 </body>
-</html>
+  </html>
